# iil-codeguard

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.windsurf/rules/: project-facts.md
github_actions/: codeguard.yml
src/iil_codeguard/: __init__.py  api.py  cli.py  domain.py
src/iil_codeguard/checkers/: __init__.py  compose_security.py  dockerfile_audit.py  htmx_required_attrs.py  orm_in_view.py
src/iil_codeguard/mcp_server/: __init__.py  server.py
src/iil_codeguard/reporters/: __init__.py  json_reporter.py  sarif.py  text.py
tests/: test_cli.py  test_compose_security.py  test_dockerfile_audit.py  test_htmx_required_attrs.py  test_mcp_server.py  test_orm_in_view.py  test_reporters.py  test_smoke.py
