[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iil-codeguard"
dynamic = ["version"]
description = "Library-first code compliance tooling for the IIL Platform (Django, HTMX, Docker, Nginx)"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Achim Dehnert", email = "achim@iil.pet" }]
keywords = ["compliance", "linter", "django", "htmx", "sarif", "mcp"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
mcp = ["fastmcp>=3.2.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
codeguard = "iil_codeguard.cli:main"
iil-codeguard-mcp = "iil_codeguard.mcp_server.server:main"

[project.urls]
Homepage = "https://github.com/achimdehnert/iil-codeguard"
Issues = "https://github.com/achimdehnert/iil-codeguard/issues"
ADR = "https://github.com/achimdehnert/platform/blob/main/docs/adr/ADR-191-adopt-iil-codeguard-library-first.md"

[tool.hatch.version]
path = "src/iil_codeguard/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/iil_codeguard"]

[tool.hatch.build.targets.sdist]
include = [
    "src/iil_codeguard",
    "tests",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "ROADMAP.md",
    "pyproject.toml",
    ".pre-commit-hooks.yaml",
    "github_actions",
]
exclude = [
    ".windsurf",
    ".venv",
    ".github",
    ".pytest_cache",
    ".ruff_cache",
    "dist",
    "build",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
